ElasticSearch 도입 - 검색 API에서 MySQL의 Full-Text Index가 아닌 ElasticSearch 기반 로직으로 변경